--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ target/*
 !.vscode/extensions.json
 _site/
 
+
+bin/.settings/org.eclipse.jdt.core.prefs
+
+bin/.settings/org.eclipse.core.resources.prefs
+
+bin/target/classes/META-INF/MANIFEST.MF
