--- a/info.yml
+++ b/info.yml
@@ -17,7 +17,7 @@ project:
     member3:
       name: 'Jesús'
       surname: 'Barba Sigüenza'
-      githubUsername: 'jesbarsig'
+      githubUsername: 'Jesusjbs'
     member4:
       name: 'Vicente'
       surname: 'Soria Vázquez'
@@ -25,4 +25,4 @@ project:
     member5:
       name: 'Marcelino'
       surname: 'González Valle'
-      githubUsername: 'margonval'
+      githubUsername: 'Marce97'
