--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,9 @@ spring.mvc.view.suffix: .jsp
 
 # Actuator / Management
 management.endpoints.web.base-path=/manage
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
 
 # Logging
 logging.level.org.springframework=INFO
